added sales role,some more changes

--- a/app/views/layouts/history.html.arb
+++ b/app/views/layouts/history.html.arb
@@ -7,6 +7,7 @@ panel "History" do
     end
     column ("Type") { |v| v.item_type.underscore.humanize }
     column ("Modified at") { |v| v.created_at.to_s :long }
+    column ("Event") { |v| v.event.underscore.humanize }
     column ("Admin") { |v| link_to AdminUser.find(v.whodunnit).email, [:admin, AdminUser.find(v.whodunnit)] }
   end
 end
