--- a/app/views/layouts/history.html.arb
+++ b/app/views/layouts/history.html.arb
@@ -8,11 +8,21 @@ panel "History" do
     column ("Type") { |v| v.item_type.underscore.humanize }
     column ("Modified at") { |v| v.created_at.to_s :long }
     column ("Event") { |v| v.event.underscore.humanize }
+    column ("Change") { |v| v.object || ''}
     list_column ("Address") do |v|
       if v.item_type == 'Delivery' and v.object
         v.object[/#{'address:'}(.*?)#{'counselorName:'}/m, 1].split('\r\n')
       end
     end
-    column ("Admin") { |v| link_to AdminUser.find(v.whodunnit).email, [:admin, AdminUser.find(v.whodunnit)] }
+    column ("Type") { |v| v.whodunnit_type}
+    column ("Whodunnit") { |v| 
+      if v.whodunnit.blank? then '' 
+      elsif v.whodunnit_type == 'admin'
+        link_to AdminUser.find(v.whodunnit).email, [:admin, AdminUser.find(v.whodunnit)]
+      else
+        raw('<a href="/admin/users/' + v.whodunnit.to_s + '">' + User.find(v.whodunnit).email + '</a>')
+      end
+    }
   end
 end
+
