don't show error on history page if admin user is not found

--- a/app/views/layouts/history.html.arb
+++ b/app/views/layouts/history.html.arb
@@ -15,12 +15,14 @@ panel "History" do
       end
     end
     column ("Type") { |v| v.whodunnit_type}
-    column ("Whodunnit") { |v| 
-      if v.whodunnit.blank? then '' 
-      elsif v.whodunnit_type == 'admin'
-        link_to AdminUser.find(v.whodunnit).email, [:admin, AdminUser.find(v.whodunnit)]
-      else
-        raw('<a href="/admin/users/' + v.whodunnit.to_s + '">' + User.find(v.whodunnit).email + '</a>')
+    column ("Whodunnit") { |v|
+      if AdminUser.find_by_id(v.whodunnit).present?
+        if v.whodunnit.blank? then ''
+          elsif v.whodunnit_type == 'admin'
+            link_to AdminUser.find(v.whodunnit).email, [:admin, AdminUser.find(v.whodunnit)]
+        else
+          raw('<a href="/admin/admin_users/' + v.whodunnit.to_s + '">' + AdminUser.find(v.whodunnit).email + '</a>')
+        end
       end
     }
   end
